[metadata]
name = cryptosploit
version = 0.3.0.1
url = https://github.com/SNESEAR/cryptosploit
author = SNESEAR, y73n0k
author_email = snesear@yandex.ru, ytka.kek@yandex.ru
license = GNU
description = Cryptography tool

[options]
install_requires =
    cryptosploit_modules @ git+https://github.com/y73n0k/cryptosploit-modules.git
python_requires = >=3.10
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cryptosploit = cryptosploit.__main__:main
