[metadata]
name = cryptosploit
version = 0.2.1.0
url = https://github.com/SNESEAR/cryptosploit
author = SNESEAR, y73n0k
author_email = snesear@yandex.ru, ytka.kek@yandex.ru
description = Cryptography tool
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Topic :: Security :: Cryptography

[options]
include_package_data = True
install_requires =
    cryptosploit_modules @ git+https://github.com/y73n0k/cryptosploit_modules.git
python_requires = >=3.10
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cryptosploit = cryptosploit.__main__:main
